<resources>
    <string name="app_name">Alice</string>

    <!-- 菜单 -->
    <string name="menu_title">设置</string>
    <string name="menu_sub_title">All Alice</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_settings">Settings</string>

    <string name="open_drawer">打开抽屉</string>
    <string name="close_drawer">关闭抽屉</string>

    <string name="menu_drawer_1">更多功能</string>
    <string name="menu_drawer_2">示例演示</string>
    <string name="menu_drawer_3">应用设置</string>
    <string name="menu_drawer_4">关于作者</string>
    <string name="menu_drawer_5">Android</string>
    <string name="menu_drawer_6">Flutter</string>
    <string name="menu_drawer_7">Kotlin</string>
    <string name="menu_drawer_8">Jetpack Compose</string>
    <string name="menu_drawer_9">iOS</string>
    <string name="menu_drawer_10">微信小程序</string>

    <string name="search">搜索</string>
    <string name="menu_more">更多</string>
    <string name="menu_favorite">收藏</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_news_details">新闻详情</string>

</resources>